# sd-exporter-immich

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: lint.yaml  sbom.yaml  trivy.yaml
src/sd_exporter_immich/: cli.py
src/sd_exporter_immich/utils/: image.py  parser.py
utils/: image.py  parser.py
