[project]
name = "sd-exporter-immich"
version = "0.1.0"
description = "Convert Stable Diffusion metadata from supported formats to immich supported .xmp files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0.2",
    "sd-prompt-reader>=1.3.5",
    "tqdm>=4.67.1",
]

[project.scripts]
sd-export = "sd_exporter_immich.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
